bad/2020-07-06/14-57/157.0/build.err
run.c: In function ‘fruit’:
run.c:14:13: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
 *Voyellemin = NULL;
             ^
run.c:15:14: warning: implicit declaration of function ‘strchr’ [-Wimplicit-function-declaration]
 voyellemin = strchr(hied, 'a', 'e', 'i', 'o', 'u', 'y');
              ^~~~~~
run.c:15:14: warning: incompatible implicit declaration of built-in function ‘strchr’
run.c:15:14: note: include ‘<string.h>’ or provide a declaration of ‘strchr’
run.c:15:14: error: too many arguments to function ‘strchr’
run.c:15:12: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
 voyellemin = strchr(hied, 'a', 'e', 'i', 'o', 'u', 'y');
            ^
run.c:16:16: warning: comparison between pointer and integer
 if (voyellemin != NULL)
                ^~
run.c:20:13: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
 *Voyellemaj = NULL;
             ^
run.c:21:14: error: too many arguments to function ‘strchr’
 voyellemaj = strchr(hied, 'A', 'E', 'I', 'O', 'U', 'Y');
              ^~~~~~
run.c:21:12: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
 voyellemaj = strchr(hied, 'A', 'E', 'I', 'O', 'U', 'Y');
            ^
run.c:22:16: warning: comparison between pointer and integer
 if (voyellemaj != NULL)
                ^~
run.c:26:19: warning: ‘return’ with a value, in function returning void
  return(voyellemin,voyellemaj);
        ~~~~~~~~~~~^~~~~~~~~~~~
run.c:7:6: note: declared here
 void fruit (char* era)
      ^~~~~